--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@
     @apply m-0 text-[2rem] h-[100dvh] sm:text-base bg-gray-100;
   }
   #root {
-    @apply h-[100dvh];
+    @apply h-[100dvh] sm:p-5;
+  }
+}
+
+@layer components {
+  .page-container {
+    @apply p-3 sm:p-3;
   }
 }
